# AIFromScratch

./: .gitignore  README.md
LogisticRegression/: Dir.mk  Makefile  a.out  h5  loadh5.c  main  mpi.c  opencv_version.cpp  read_hdf5  testavx  testavx.c  version
LogisticRegression/dataset/: modularize_readtrain_hdf5  modularize_readtrain_hdf5.c  read_hdf5  readtrain_hdf5  readtrain_hdf5.c  script.sh
LogisticRegression/include/: hdf5_utils.h  nn.h
LogisticRegression/src/: hdf5_utils.c  main.c
NeuralNetworks_1/: Makefile  main.c  testavx.c  weights.txt
NeuralNetworks_1/common/: Dir.mk  Makefile
NeuralNetworks_1/dataset/: Notes.md  read_hdf5.c  readtrain_hdf5.c
NeuralNetworks_1/deep_neural_network/: Dir.mk  ReadMe.md  deep_neural_network  parameters.txt
NeuralNetworks_1/deep_nn/: Dir.mk  Makefile
NeuralNetworks_1/include/: hdf5_utils.h  nn.h
Transformer_Encoder/: CMakeList.txt
Transformer_Encoder/include/: attention.h  attention_backward.h  embedding.h  feedforward.h  feedforward_backward.h  loss.h  loss_backward.h  matrix.h  positional_encoding.h  transformer.h  transformer_backward.h
Transformer_Encoder/src/: attention.c  attention_backward.c  embedding.c  loss.c  (+6 more)
Transformer_Encoder_parallel/: CMakeLists.txt  ReadMe.md  log_parallel.py  log_to_tensorboard.py
Transformer_Encoder_parallel/include/: computational_graph.h  transformer.h
Transformer_Encoder_parallel/src/: Transformer_NER.md  draw_computational_graph.c  main.c  transformer.c
Transformer_Encoder_scratch/: CMakeLists.txt  Readme.md
Transformer_Encoder_simple/: CMakeLists.txt
basic_nn_tensorboard/: CMakeLists.txt  convert_to_tensorboard.py  log_config.py  log_to_tensorboard.py
basic_nn_tensorboard/include/: transformer.h
basic_nn_tensorboard/src/: main.c
tensor_flow_Example/: hello_tf.c  script.sh  tensor.py
(+18 files in other folders)
